--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "author": "Tombal",
   "license": "UNLICENSED",
+  "browserslist": "last 4 versions",
   "bugs": {
     "url": "https://github.com/Childe-Git/NicolasTombal_5_05042021/issues"
   },
